--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,26 +7,27 @@ on:
     branches: [main]
 
 jobs:
-  install-and-verify:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js with Corepack
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
+      - name: Enable Corepack (activates pnpm)
+        run: corepack enable
+
+      - name: Verify pnpm version
+        run: pnpm -v
 
       - name: Install dependencies
         run: pnpm install
 
-      - name: Finish
-        run: echo "EcoMAD CI pipeline ejecutado con éxito 🚀"
+      - name: Final message
+        run: echo "✅ CI ejecutado con éxito"
