--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,20 @@ jobs:
 
     steps:
       - name: Checkout repo
+
         uses: actions/checkout@v4
 
       - name: Setup Node.js with Corepack
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'
+          cache: "pnpm"
 
       - name: Enable Corepack (activates pnpm)
         run: corepack enable
+
+      - name: Install pnpm with Corepack
+        run: corepack prepare pnpm@latest --activate
 
       - name: Verify pnpm version
         run: pnpm -v
