--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,17 @@ jobs:
 
     steps:
       - name: Checkout repo
-
         uses: actions/checkout@v4
 
-      - name: Setup Node.js with Corepack
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
 
-      - name: Enable Corepack (activates pnpm)
-        run: corepack enable
-
-      - name: Install pnpm with Corepack
-        run: corepack prepare pnpm@latest --activate
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
 
       - name: Verify pnpm version
         run: pnpm -v
