feat: add linter

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev:backend": "pnpm --filter backend run dev",
+    "dev:frontend": "cd apps/frontend && ns run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
