--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "frontend",
-  "main": "src/app.ts",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@nativescript/core": "~8.9.1",
-    "nativescript-vue": "3.0.1"
-  },
-  "devDependencies": {
-    "@nativescript/tailwind": "~4.0.3",
-    "@nativescript/types": "~8.9.1",
-    "@nativescript/webpack": "~5.0.24",
-    "@types/node": "~22.14.0",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5.8.3"
-  }
+	"name": "ecomad",
+	"main": "src/app.ts",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"lint": "eslint ./src",
+		"lint:debug": "eslint ./src --debug",
+		"lint:fix": "eslint ./src --fix",
+		"format": "prettier ./src  --write ."
+	},
+	"dependencies": {
+		"@nativescript/core": "~8.9.1",
+		"nativescript-vue": "3.0.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.29.0",
+		"@nativescript/ios": "8.9.2",
+		"@nativescript/tailwind": "~4.0.3",
+		"@nativescript/types": "~8.9.1",
+		"@nativescript/webpack": "~5.0.24",
+		"@types/eslint-plugin-tailwindcss": "^3.17.0",
+		"@types/node": "~22.14.0",
+		"@vue/eslint-config-typescript": "^14.5.1",
+		"eslint": "^9.29.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-tailwindcss": "^3.18.0",
+		"eslint-plugin-vue": "^10.2.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"tailwindcss": "^4.1.3",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.34.1"
+	}
 }
