--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,6 +4,9 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:coverage": "vitest run --coverage",
 		"lint": "eslint ./src",
 		"lint:debug": "eslint ./src --debug",
 		"lint:fix": "eslint ./src --fix",
@@ -21,15 +24,19 @@
 		"@nativescript/webpack": "~5.0.24",
 		"@types/eslint-plugin-tailwindcss": "^3.17.0",
 		"@types/node": "~22.14.0",
+		"@vitejs/plugin-vue": "^5.2.4",
 		"@vue/eslint-config-typescript": "^14.5.1",
+		"@vue/test-utils": "^2.4.6",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"eslint-plugin-vue": "^10.2.0",
+		"jsdom": "^26.1.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"tailwindcss": "^4.1.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.1"
+		"typescript-eslint": "^8.34.1",
+		"vitest": "^3.2.3"
 	}
 }
