--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@nativescript/core": "~8.9.1",
+		"@nativescript/localize": "^5.2.0",
 		"nativescript-vue": "3.0.1",
 		"pinia": "^3.0.3"
 	},
