--- a/apps/frontend/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/apps/frontend/App_Resources/Android/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme"
-		android:hardwareAccelerated="true">
+		android:hardwareAccelerated="true"
+		android:usesCleartextTraffic="true">
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
@@ -27,7 +28,7 @@
 			android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|locale|uiMode"
 			android:theme="@style/LaunchScreenTheme"
 			android:hardwareAccelerated="true"
-      		android:launchMode="singleTask"
+      android:launchMode="singleTask"
 			android:exported="true">
 
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
@@ -38,5 +39,6 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="com.tns.ErrorReportActivity"/>
+		<service android:name="com.mapbox.services.android.telemetry.service.TelemetryService" />
 	</application>
 </manifest>
