--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,9 @@ packages:
   - apps/*
   - packages/*
 
+ignoredBuiltDependencies:
+  - '@nativescript/localize'
+
 onlyBuiltDependencies:
   - '@nativescript/core'
   - '@parcel/watcher'
