feat: add initial props to Map component

--- a/apps/frontend/App_Resources/iOS/Info.plist
+++ b/apps/frontend/App_Resources/iOS/Info.plist
@@ -43,5 +43,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to show you the map</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need your location to show you the map</string>
+	<key>UIBackgroundModes</key>
+<array>
+  <string>location</string>
+</array>
 </dict>
 </plist>
